# hexlet-pytest

./: Makefile  pyproject.toml
hexlet_pytest/: example.py
tests/: test_example.py
tests/fixtures/: origin.txt  reversed.txt
