[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = "Educational project. Python: Automated Testing"
repository = "https://github.com/EdZev/hexlet-pytest"
authors = ["Edker <p89028084234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
